kindle alignment bug

--- a/app/webroot/css/components/flyout.scss
+++ b/app/webroot/css/components/flyout.scss
@@ -1,5 +1,5 @@
 *{
-	-webkit-tap-highlight-color: red;
+	-webkit-tap-highlight-color: transparent;
 }
 
 
